--- a/documentation/home.textile
+++ b/documentation/home.textile
@@ -3,6 +3,10 @@ h1. What is play-httpmock ?
 *play-httpmock* is a "play! framework":http://playframework.org module allowing you to cache a WebService response to overcome connection problems (lag, denial of service, HTTP errors) for fast developping.
 So of course, it only concerns the DEV mode.
 
+h1. Which play version to use ?
+
+Due to anterior restriction, the module is only compatible with a recent play version (since "this commit":http://github.com/playframework/play/commit/1f2d8bfa632cb65383322fd45d26d2b9c487f934).
+
 h1. How to use play-httpmock ?
 
 You only need to import the module in your *application.conf*.
