Update README (doc url change)

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-See the documentation here : http://github.com/gre/play-httpmock/blob/master/documentation/home.textile
+See the documentation here : http://github.com/zenexity/play--httpmock/blob/master/documentation/home.textile#readme
