--- a/documentation/home.textile
+++ b/documentation/home.textile
@@ -1,6 +1,6 @@
 h1. What is play-httpmock ?
 
-*play-httpmock* is a "play! framework":http://playframework.org module allowing you to cache a WebService response to overcome connection problems (lag, denial of service, HTTP errors) for fast developping.
+*play-httpmock* is a "play! framework":http://playframework.org module allowing you to cache WebService responses to overcome connection problems (lag, denial of service, HTTP errors) for fast developping.
 So of course, it only concerns the DEV mode.
 
 h1. Which play version to use ?
